# aws_fargate_capacity

./: Cargo.toml
src/: main.rs
